refactor and rewrite of code

--- a/src/intro.2.mdx
+++ b/src/intro.2.mdx
@@ -1,6 +1,6 @@
-import Layout from './layouts/layout';
+import Layout from './components/ui/layouts/layout';
 import Navigation from './utils/navigation';
-import { FirstSlide } from './first_slide';
+import { FirstSlide } from './components/slides/firstSlide';
 import { CodeSurfer } from 'mdx-deck-code-surfer';
 
 <FirstSlide title="Simply React ⚛️" subtitle="Why I love React Patterns so much">
