--- a/src/introduction.mdx
+++ b/src/introduction.mdx
@@ -5,7 +5,7 @@ import { Image } from 'mdx-deck';
   <title>ZIEGLER Morgan : Formation Git</title>
   <meta name="description" content="ZIEGLER Morgan - Formation Git" />
   <meta name="keywords" content="ZIEGLER Morgan, Formation Git" />
-  <link rel="icon" type="image/png" href="./src/images/favicon.png" />
+  <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
 </Head>
 
-<Image src="./src/images/git.png" />
+<Image src="./src/assets/git.png" />
