--- a/src/table_content.copie.mdx
+++ b/src/table_content.copie.mdx
@@ -1,4 +1,4 @@
-import LayoutSplit from './layouts/layout_split';
+import LayoutSplit from './components/ui/layouts/layout_split';
 
 export default LayoutSplit;
 
