--- a/src/who_is_it.mdx
+++ b/src/who_is_it.mdx
@@ -1,4 +1,4 @@
-import Layout from './layouts/layout';
+import Layout from './components/ui/layouts/layout';
 import Navigation from './utils/navigation';
 
 # Qui est-ce ?
